ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: targabay-webapp-ingress
  namespace: targabay
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`targabay.com`)
      services:
        - kind: Service
          name: webapp
          port: 3000
    - kind: Rule
      match: Host(`slek.link`)
      services:
        - kind: Service
          name: webapp
          port: 8080
